# Vendor-to-Vendor-

./: .env  .gitignore  README.md  alembic.ini  app.py  config.py  crud.py  llm_integration.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
alembic/: env.py
app/: logic.py  main.py
app/api/v1/: chat.py  market.py  negotiations.py  orders.py  products.py  router.py  transactions.py
app/core/: config.py  database.py  logging.py
app/crud/: __init__.py  chat.py  negotiation.py  order.py  product.py  transaction.py
app/models/: __init__.py  chat.py  negotiation.py  order.py  product.py  transaction.py
app/schemas/: __init__.py  chat.py  market.py  negotiation.py  order.py  product.py  transaction.py
app/services/: product_engine.py
frontend/: app.py
