[project]
name = "vendor-chat-app"
version = "0.1.0"
description = "Vendor-to-Vendor Marketplace Chat System (English + Nepali)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy>=2.0.0",
    # "psycopg2-binary>=2.9.0",  # uncomment if using PostgreSQL
    "alembic>=1.14.0",
    # Validation & settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # HTTP client (for frontend)
    "requests>=2.31.0",
    # Frontend
    "streamlit>=1.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
